@@ -1,5 +1,12 @@
 2019-06-24  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/std/numeric (midpoint(T, T)): Change implementation for
+	floating-point types to avoid incorrect rounding of denormals.
+	* testsuite/26_numerics/midpoint/floating.cc: Add check for correct
+	rounding with denormals.
+	* testsuite/26_numerics/gcd/gcd_neg.cc: Adjust dg-error line numbers.
+	* testsuite/26_numerics/lcm/lcm_neg.cc: Likewise.
+
 	* testsuite/18_support/headers/cfloat/values_c++17.cc: New test.
 
 2019-06-20  Jonathan Wakely  <jwakely@redhat.com>
